feat udistrital/polux_cliente#440: Módulo Solicitudes
- Se implementa servicio /solicitudes que retorna las solicitudes filtradas por usuario.
- El servicio retorna si el usuario para el que se realiza la consulta, puede realizar alguna revisión.
- Los permisos de revisión se determinan con una estuctura puntual.
