# swagger/swagger.json
@@ -126,6 +126,188 @@
                 }
             }
         },
+        "/solicitudes/": {
+            "get": {
+                "tags": [
+                    "solicitudes"
+                ],
+                "description": "get Solicitudes",
+                "operationId": "SolicitudesController.GetAll",
+                "parameters": [
+                    {
+                        "in": "query",
+                        "name": "user",
+                        "description": "email del usuario del que se hace la consula",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "query",
+                        "description": "Filter. e.g. col1:v1,col2:v2 ...",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "fields",
+                        "description": "Fields returned. e.g. col1,col2 ...",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "sortby",
+                        "description": "Sorted-by fields. e.g. col1,col2 ...",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "order",
+                        "description": "Order corresponding to each sortby field, if single value, apply to all sortby fields. e.g. desc,asc ...",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "limit",
+                        "description": "Limit the size of result set. Must be an integer",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "offset",
+                        "description": "Start position of result set. Must be an integer",
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.Solicitudes"
+                        }
+                    },
+                    "403": {
+                        "description": ""
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "solicitudes"
+                ],
+                "description": "create Solicitudes",
+                "operationId": "SolicitudesController.Create",
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "body for Solicitudes content",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Solicitudes"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.Solicitudes"
+                        }
+                    },
+                    "403": {
+                        "description": "body is empty"
+                    }
+                }
+            }
+        },
+        "/solicitudes/{id}": {
+            "get": {
+                "tags": [
+                    "solicitudes"
+                ],
+                "description": "get Solicitudes by id",
+                "operationId": "SolicitudesController.GetOne",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "id",
+                        "description": "The key for staticblock",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.Solicitudes"
+                        }
+                    },
+                    "403": {
+                        "description": ":id is empty"
+                    }
+                }
+            },
+            "put": {
+                "tags": [
+                    "solicitudes"
+                ],
+                "description": "update the Solicitudes",
+                "operationId": "SolicitudesController.Put",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "id",
+                        "description": "The id you want to update",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "body for Solicitudes content",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Solicitudes"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.Solicitudes"
+                        }
+                    },
+                    "403": {
+                        "description": ":id is not int"
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "solicitudes"
+                ],
+                "description": "delete the Solicitudes",
+                "operationId": "SolicitudesController.Delete",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "id",
+                        "description": "The id you want to delete",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{string} delete success!"
+                    },
+                    "403": {
+                        "description": "id is empty"
+                    }
+                }
+            }
+        },
         "/verificarRequisitos/CantidadModalidades": {
             "post": {
                 "tags": [
@@ -284,6 +466,10 @@
                     "type": "string"
                 }
             }
+        },
+        "models.Solicitudes": {
+            "title": "Solicitudes",
+            "type": "object"
         }
     },
     "tags": [
@@ -310,6 +496,10 @@
         {
             "name": "creditos_materias",
             "description": "CreditosMateriasController operations for CreditosMaterias\n"
+        },
+        {
+            "name": "solicitudes",
+            "description": "SolicitudesController operations for Solicitudes\n"
         }
     ]
 }
